@@ -2,10 +2,12 @@ Changelog of Package-Subroutine
 ###############################
 
 0.23.0
-     - Package::Subroutine::Namespaces is strict refs compatible
+     - Package::Subroutine::Namespace is strict refs compatible
      - wrong named methods list_childs and delete_childs renamed
        THIS IS A COMPATIBILITY CHANGE!
      - Tests are using Test2::Suite
+     - add warnings in Package::Subroutine::Namespace when the 
+       package to work with is not available
 
 0.22.5 2025-03-31
      - improve test which checks import call on unknown package
